# kommatipara-code-challenge

./: README.md  exercise.md  kommatipara_app.pyz  requirements.txt  test_cases.py
.github/workflows/: build.yml  buildyml
app/: Dockerfile  __main__.py  generic_functions.py  logger.py
client_data/: .part-00000-dbeebbb5-6bf9-4ce5-a771-be8b03455751-c000.csv.crc
kommatipara_app/: __main__.py  generic_functions.py  logger.py  pyproject.toml  test_cases.py
